# wilupgu

./: Cargo.toml  README.md
examples/: meta_cache_check.rs
src/: context.rs  graph.rs  lib.rs  tensor.rs
src/context/: cuda.rs
src/graph/: cuda_exec.rs  fuse.rs
src/nn/: cuda_kernels.rs  mod.rs  shaders.rs
src/shaders/: causal_mask.wgsl  matmul.wgsl
src/shaders/bwd/: adamw.wgsl  embedding_bwd.wgsl  matmul_weight_trp.wgsl  rmsnorm_bwd.wgsl  softmax_bwd.wgsl
src/shaders/fwd/: matmul_trp.wgsl  rmsnorm.wgsl
tests/: advanced_graph_test.rs  graph_chain_test.rs
